# interpreters

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PARSER_PLAN.md  PARSER_TODO.md  README.md  REFACTOR_PLAN.md  TYPE_CHECKER_PLAN.md  aspirations.md  closures_plan.md  codegen_cleanup_todos.md  feature_roadmap.md  main.cpp  monomorphization.md  monomorphization_todo.md  tuples_codegen_plan.md
.githooks/: pre-commit  pre-push
archive/: EVALUATOR_PLAN.md  TYPE_ANNOTATION_PLAN.md  TYPE_CHECKER_PLAN.md
blip/: CMakeLists.txt  README.md
blip/inc/: ast.hpp  ast_dumper.hpp  ast_printer.hpp  ast_visitor.hpp  blip.hpp  blip_tokens.hpp  blipast.hpp  environment.hpp  evaluator.hpp  lexer.hpp  parser.hpp  type.hpp  type_checker.hpp  value.hpp
blip/programs/: countdown.bp  factorial.bp  fibonacci.bp  fizzbuzz.bp
blip/src/: blip.cpp  blip_tokens.cpp  blipast.cpp  environment.cpp  evaluator.cpp  lexer.cpp  main.cpp  parser.cpp  type.cpp  type_checker.cpp  value.cpp
blip/test/: .clang-tidy
blip/test/src/: ast_printer_test.cpp  environment_test.cpp  evaluator_test.cpp  lexer_test.cpp  main.cpp  parser_test.cpp  token_test.cpp  type_checker_test.cpp
bust/: CMakeLists.txt  TODO.md  grammar.md
bust/ast/: dump.hpp  nodes.hpp  operators.hpp  types.hpp
bust/ast/inc/: ast.hpp  ast_dump.hpp
bust/codegen/: arena.cpp  arena.hpp  basic_block.hpp  block_label.cpp  block_label.hpp  closure_builder.cpp  closure_builder.hpp  context.hpp  expression_generator.cpp  expression_generator.hpp  formatter.cpp  formatter.hpp  function.hpp  function_declaration.hpp  function_handle.cpp  function_handle.hpp  handle.hpp  instructions.hpp  ir_builder.cpp  ir_builder.hpp  ir_literals.hpp  ir_syntax.hpp  let_binding_generator.cpp  let_binding_generator.hpp  module.hpp  naming_conventions.hpp  parameter.hpp  statement_generator.cpp  statement_generator.hpp  symbol_table.hpp  top_item_generator.cpp  top_item_generator.hpp  types.hpp  value.hpp
bust/eval/: context.hpp  environment.hpp  evaluator_context.hpp  expression_evaluator.cpp  expression_evaluator.hpp  let_binding_evaluator.cpp  let_binding_evaluator.hpp  statement_evaluator.cpp  statement_evaluator.hpp  top_item_evaluator.cpp  top_item_evaluator.hpp  values.hpp
bust/hir/: block_checker.cpp  block_checker.hpp  checker_context.hpp  context.hpp  dump.hpp  environment.hpp  expression_checker.cpp  expression_checker.hpp  free_type_variable_collector.hpp  instantiation_record.hpp  let_binding_checker.cpp  let_binding_checker.hpp  nodes.hpp  statement_checker.cpp  statement_checker.hpp  top_item_checker.cpp  top_item_checker.hpp  type_arena.cpp  type_arena.hpp  type_converter.hpp  type_environment.hpp  type_registry.cpp  type_registry.hpp  type_unifier.hpp  type_variable_collapser.hpp  type_variable_substituter.hpp  type_variable_updater.hpp  type_visitors.hpp  types.hpp  unifier_state.hpp  union_find.hpp
bust/inc/: arena.hpp  ast.hpp  ast_dump.hpp  bust.hpp  bust_tokens.hpp  codegen.hpp  evaluator.hpp  frontend.hpp  lexer.hpp  monomorpher.hpp  nodes.hpp  operators.hpp  parser.hpp  pipeline.hpp  prelude_source.hpp.in  tokens.hpp  type_checker.hpp  typed_ast.hpp  types.hpp  validate_main.hpp  zir_lowerer.hpp  zonker.hpp
bust/mono/: context.hpp  dot_expr_resolver.cpp  dot_expr_resolver.hpp  dump.hpp  expression_substituter.cpp  expression_substituter.hpp  let_binding_monomorpher.cpp  let_binding_monomorpher.hpp  let_binding_substituter.hpp  name_mangler.hpp  nodes.hpp  specialization.hpp  statement_monomorpher.cpp  statement_monomorpher.hpp  statement_substituter.hpp  top_item_monomorpher.cpp  top_item_monomorpher.hpp
bust/programs/: bad_poly.bu  bad_poly_2.bu  bad_poly_3.bu  binary_add.bu  closure.bu  closure_2.bu  closure_3.bu  fibonacci.bu  good_poly.bu  good_poly_2.bu  hello_world.bu  lambda.bu  let_math.bu  let_return.bu  polymorphic.bu  return_zero.bu  short_circuit.bu
bust/src/: bust.cpp  bust_tokens.cpp  codegen.cpp  evaluator.cpp  frontend.cpp  lexer.cpp  main.cpp  monomorpher.cpp  parser.cpp  tokens.cpp  type_checker.cpp  validate_main.cpp  zir_lowerer.cpp  zonker.cpp
bust/std/: prelude.bs
bust/test/inc/: codegen_test_helpers.hpp
bust/test/src/: codegen_expressions_test.cpp  codegen_functions_test.cpp  codegen_lambdas_test.cpp  codegen_side_effects_test.cpp  codegen_test.cpp  codegen_test_helpers.hpp  codegen_tuples_test.cpp  evaluator_test.cpp  free_variable_collector_test.cpp  lexer_test.cpp  main.cpp  monomorpher_test.cpp  name_mangler_test.cpp  parser_test.cpp  type_checker_test.cpp  type_unifier_test.cpp  validate_main_test.cpp  zir_lowerer_test.cpp  zonker_test.cpp
bust/zir/: arena.cpp  arena.hpp  context.hpp  dump.hpp  environment.hpp  expression_lowerer.cpp  expression_lowerer.hpp  free_variable_collector.hpp  let_binding_lowerer.cpp  let_binding_lowerer.hpp  nodes.hpp  program.hpp  statement_lowerer.cpp  statement_lowerer.hpp  top_item_lowerer.cpp  top_item_lowerer.hpp  type_resolver.hpp  types.hpp
bust/zonk/: context.hpp  expression_zonker.cpp  expression_zonker.hpp  let_binding_zonker.cpp  let_binding_zonker.hpp  statement_zonker.cpp  statement_zonker.hpp  top_item_zonker.cpp  top_item_zonker.hpp  type_resolver.hpp
cmake/: FindDocTest.cmake  FindRapidCheck.cmake  Platform.cmake
core/: CMakeLists.txt
core/inc/: exceptions.hpp  hash_combine.hpp  lexer_interface.hpp  scope_guard.hpp  source_location.hpp  token.hpp
core/inc/sc/: ast.hpp  ast_visitor.hpp  core_lexer.hpp  example.hpp  exceptions.hpp  language_interface.hpp  lexer_interface.hpp  sc.hpp  source_location.hpp  token.hpp
core/src/: core_lexer.cpp  example.cpp  exceptions.cpp  language_interface.cpp  lexer_interface.cpp  source_location.cpp  token.cpp
core/test/: example_test.cpp  main.cpp
core/test/inc/: core_test_lib.hpp
core/test/src/: core_lexer_test.cpp  example_test.cpp  main.cpp  token_test.cpp
programs/: closures.bp  higher_order.bp  pi.bp  sqrt.bp
scripts/: run-iwyu.sh
